fixed backface visibility for safari

--- a/css/main.css
+++ b/css/main.css
@@ -2578,6 +2578,7 @@ span.dropcap {
 /* hide back of pane during swap */
 .front, .back {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 
   position: absolute;
   top: 0;
